<resources>
    <string name="app_name">FloatingBall</string>

    <string name="GITHUB_REPO_URL">https://github.com/etet2007/FloatingBall</string>
    <string name="GITHUB_REPO_RELEASE_URL">https://github.com/etet2007/FloatingBall/releases</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="accessibility">Floating ball accessibility.</string>
    <string name="on_off">On/Off:</string>
    <string name="opacity">Opacity</string>
    <string name="size">Size</string>
    <string name="use_background_picture">Show background picture?</string>
    <string name="choose_picture">Choose background picture</string>
    <string name="upDistance">Move up distance</string>

    <string name="openAccessibility">Please open accessibility of FloatingBall</string>
    <string name="active_device_administrator">Active device administrator</string>

    <string name="communicate">Communicate</string>
    <string name="license">License</string>

    <string name="drawoverlays_permission">DrawOverlays permission</string>
    <string name="request_accessibility">Request accessibility</string>

    <string name="single_tap_title">Single tap</string>
    <string name="single_tap">Single tap:</string>

    <string name="double_click_title">Double click</string>
    <string name="double_click">Double click:</string>

    <string name="right_swipe_title">Swipe right</string>
    <string name="right_swipe">Swipe right:</string>

    <string name="left_swipe_title">Swipe left</string>
    <string name="left_swipe">Swipe left:</string>

    <string name="up_swipe_title">Swipe up</string>
    <string name="up_swipe">Swipe up:</string>

    <string name="down_swipe_title">Swipe down</string>
    <string name="down_swipe">Swipe down:</string>

    <string name="use_gray_background">Show gray background?</string>
    <!--function list-->
    <string name="home">Home</string>
    <string name="lock_screen">Old version lock screen</string>
    <string name="rootLockScreen">Lock screen(Root)</string>
    <string name="none">None</string>
    <string name="recent_apps">Recent apps</string>
    <string name="last_app">Last app</string>
    <string name="hide">Hide</string>
    <string name="notification">Expand notifications</string>
    <string name="screen_shot">Screenshot</string>
    <string name="back">Back</string>
    <string name="killProcess">Kill process(Root)</string>
    <string name="systemLockScreen">Lock screen(Above Android 9)</string>
    <string name="system_screen_shot">Screenshot(Above Android 9)</string>

    <string name="hide_notification_content_title">Hiding</string>
    <string name="hideNotificationContentText">Click to bring it back.</string>

    <string name="version_textView">Version:%s</string>
    <string name="add_ball_hint">Add floating ball.</string>
    <string name="remove_ball_hint">Remove floating ball.</string>


    <string name="setting">Setting</string>
    <string name="uninstall">Uninstall</string>
    <string name="is_vibrate">Vibrate</string>
    <string name="is_rotate_hide">Hide when rotate screen</string>
    <string name="opacity_mode">Opacity mode:</string>
    <string name="reduce">Reduce</string>
    <string name="breathing">Breathing</string>

    <string name="ball_theme">Theme:</string>


    <string name="no_support_screenshot">Your system is not supported.</string>
    <string name="screenshot_fail">Failed to store a screenshot.</string>
    <string name="screenshot_succeed">Screenshot succeed!</string>
  <string name="avoid_keyboard">Avoid keyboard</string>
  <string name="amount">Amount:</string>
  <string name="donate">Donate</string>
    <string name="noAliPay">Can\'t find AliPay</string>
    <string name="theme">Theme:</string>
    <string name="lock_screen_fail">Fail to lock screen</string>


</resources>
