<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">


    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/setting"/>

    <item
        android:id="@+id/nav_license"
        android:icon="@drawable/ic_announcement_black_24dp"
        android:title="@string/license"/>

    <item
      android:id="@+id/donate"
      android:contentDescription="haha"
      android:icon="@drawable/ic_menu_donate"
      android:title="@string/donate"/>

    <item
        android:id="@+id/uninstall"
        android:icon="@drawable/ic_menu_delete_forever"
        android:title="@string/uninstall"/>

</menu>
