<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/root_linearLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:theme="@style/textTheme">


  <android.support.v7.widget.CardView
    style="@style/CardViewStyle"
    >

    <android.support.v7.widget.LinearLayoutCompat
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="10dp"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      tools:context=".ui.activity.MainActivity"
      >
      <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/opacity"
        />

      <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        style="@style/DiscreteSeekBarStyle"
        android:id="@+id/opacity_seekbar"
        app:dsb_max="255"
        app:dsb_min="0"
        app:dsb_value="125"
        />
      <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/size"
        />

      <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        style="@style/DiscreteSeekBarStyle"
        android:id="@+id/size_seekbar"
        app:dsb_max="80"
        app:dsb_min="1"
        app:dsb_value="40"
        />

      <RelativeLayout
        style="@style/DialogRelativeLayoutStyle"
        android:id="@+id/opacity_mode_relativeLayout"
        >

        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:text="@string/opacity_mode"
          />

        <android.support.v7.widget.AppCompatTextView
          android:id="@+id/opacity_mode_textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:text="@string/none"
          android:textColor="@color/colorPrimaryDark"/>
      </RelativeLayout>

      <android.support.v7.widget.SwitchCompat
        style="@style/SwitchStyle"
        android:id="@+id/use_gray_background_switch"
        android:text="@string/use_gray_background"
        />

      <android.support.v7.widget.SwitchCompat
        style="@style/SwitchStyle"
        android:id="@+id/background_switch"
        android:text="@string/use_background_picture"
        />

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/choosePic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/choose_picture"
        />
    </android.support.v7.widget.LinearLayoutCompat>
  </android.support.v7.widget.CardView>


  <android.support.v7.widget.CardView
    style="@style/CardViewStyle"
    >

    <android.support.v7.widget.LinearLayoutCompat
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:gravity="center_horizontal"
      android:orientation="vertical">
      <RelativeLayout
        style="@style/DialogRelativeLayoutStyle"
        android:id="@+id/single_tap_function"
        >

        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:text="@string/single_tap"
          android:textSize="18sp"
          />

        <android.support.v7.widget.AppCompatTextView
          android:id="@+id/single_tap_textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:text="@string/none"
          android:textColor="@color/colorPrimaryDark"/>
      </RelativeLayout>

      <RelativeLayout
        style="@style/DialogRelativeLayoutStyle"
        android:id="@+id/double_click_function"
        >

        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:text="@string/double_click"
          android:textSize="18sp"
          />

        <android.support.v7.widget.AppCompatTextView
          android:id="@+id/double_click_textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:text="@string/none"
          android:textColor="@color/colorPrimaryDark"/>
      </RelativeLayout>

      <RelativeLayout
        style="@style/DialogRelativeLayoutStyle"
        android:id="@+id/left_function"
        >

        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:text="@string/left_slide"
          android:textSize="18sp"
          />

        <android.support.v7.widget.AppCompatTextView
          android:id="@+id/left_slide_textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:text="@string/recent_apps"
          android:textColor="@color/colorPrimaryDark"/>
      </RelativeLayout>

      <RelativeLayout
        style="@style/DialogRelativeLayoutStyle"
        android:id="@+id/right_function"
        >

        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:text="@string/right_slide"
          android:textSize="18sp"
          />

        <android.support.v7.widget.AppCompatTextView
          android:id="@+id/right_slide_textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:text="@string/recent_apps"
          android:textColor="@color/colorPrimaryDark"/>
      </RelativeLayout>

      <RelativeLayout
        style="@style/DialogRelativeLayoutStyle"
        android:id="@+id/up_function"
        >

        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:text="@string/up_slide"
          android:textSize="18sp"
          />

        <android.support.v7.widget.AppCompatTextView
          android:id="@+id/up_slide_textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:text="@string/home"
          android:textColor="@color/colorPrimaryDark"/>
      </RelativeLayout>

      <RelativeLayout
        style="@style/DialogRelativeLayoutStyle"
        android:id="@+id/down_function"
        >

        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:text="@string/down_slide"
          android:textSize="18sp"
          />

        <android.support.v7.widget.AppCompatTextView
          android:id="@+id/down_slide_textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:text="@string/notification"
          android:textColor="@color/colorPrimaryDark"/>
      </RelativeLayout>
    </android.support.v7.widget.LinearLayoutCompat>


  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    style="@style/CardViewStyle"
    >

    <android.support.v7.widget.LinearLayoutCompat
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <android.support.v7.widget.SwitchCompat
        style="@style/SwitchStyle"
        android:id="@+id/avoid_keyboard_switch"
        android:text="@string/avoid_keyboard"
        />

      <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/upDistance"
        />

      <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        style="@style/DiscreteSeekBarStyle"
        android:id="@+id/upDistance_seekbar"
        app:dsb_max="200"
        app:dsb_min="0"
        app:dsb_value="8"

        />
    </android.support.v7.widget.LinearLayoutCompat>

  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    style="@style/CardViewStyle"
    >

    <android.support.v7.widget.LinearLayoutCompat
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:gravity="center_horizontal"
      android:orientation="vertical">
      <android.support.v7.widget.SwitchCompat
        style="@style/SwitchStyle"
        android:id="@+id/is_rotate_hide"
        android:text="@string/is_rotate_hide"
        />

      <android.support.v7.widget.SwitchCompat
        style="@style/SwitchStyle"
        android:id="@+id/vibrate_switch"
        android:text="@string/is_vibrate"
        />


    </android.support.v7.widget.LinearLayoutCompat>

  </android.support.v7.widget.CardView>


</android.support.v7.widget.LinearLayoutCompat>








