<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:theme="@style/CardViewTextTheme"

	android:orientation="vertical">

<!--测试iconics-->
	<!--<ImageView-->
		<!--android:layout_width="48dp"-->
		<!--android:layout_height="48dp"-->
		<!--app:ico_color="@color/colorPrimaryDark"-->
		<!--app:ico_icon="gmd-adb"-->
		<!--app:ico_size="48dp" />-->

	<android.support.v7.widget.CardView
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/CardViewStyle"
		>

		<android.support.v7.widget.LinearLayoutCompat
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:gravity="center_horizontal"
			android:layout_margin="10dp"
			app:layout_behavior="@string/appbar_scrolling_view_behavior"
			tools:context="com.chenyee.stephenlau.floatingball.activities.MainActivity"
			tools:showIn="@layout/app_bar_main">
            <!--android:text="@string/opacity"-->
			<android.support.v7.widget.AppCompatTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/opacity"
				android:layout_marginBottom="20dp"
				/>

			<org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
				android:id="@+id/opacity_seekbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:dsb_min="0"
				app:dsb_max="255"
				app:dsb_value="125"
				app:dsb_progressColor="@color/colorAccent"
				app:dsb_indicatorColor="@color/colorAccent"
				/>
			<android.support.v7.widget.AppCompatTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/size"
				android:layout_marginBottom="20dp"
				/>
			<org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
				android:id="@+id/size_seekbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:dsb_min="1"
				app:dsb_max="80"
				app:dsb_value="40"
				app:dsb_progressColor="@color/colorAccent"
				app:dsb_indicatorColor="@color/colorAccent"
				/>
			<!--<android.support.v7.widget.AppCompatTextView-->
				<!--android:layout_width="match_parent"-->
				<!--android:layout_height="wrap_content"-->
				<!--android:gravity="center_horizontal"-->
				<!--android:text="是否显示灰色背景？"-->
				<!--android:layout_marginBottom="10dp"-->
				<!--/>-->
			<android.support.v7.widget.SwitchCompat
				android:text="@string/use_gray_background"
				android:id="@+id/use_gray_background_switch"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:switchPadding="20dp"
				android:layout_marginTop="20dp"
				/>
		</android.support.v7.widget.LinearLayoutCompat>

	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:android="http://schemas.android.com/apk/res/android"
		style="@style/CardViewStyle"
		>
		<android.support.v7.widget.LinearLayoutCompat
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:gravity="center_horizontal"
			android:layout_margin="10dp"

			app:layout_behavior="@string/appbar_scrolling_view_behavior"
			tools:context="com.chenyee.stephenlau.floatingball.activities.MainActivity"
			tools:showIn="@layout/app_bar_main">
		<!--<android.support.v7.widget.AppCompatTextView-->
			<!--android:layout_width="match_parent"-->
			<!--android:layout_height="wrap_content"-->
			<!--android:gravity="center_horizontal"-->
			<!--android:text="@string/use_background_picture"-->
			<!--android:layout_marginBottom="10dp"-->
			<!--/>-->
		<android.support.v7.widget.SwitchCompat
			android:text="@string/use_background_picture"
			android:id="@+id/background_switch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:switchPadding="20dp"
			/>
		<android.support.v7.widget.AppCompatButton
			android:id="@+id/choosePic_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/choose_picture"
			android:layout_marginTop="20dp"
			/>
		</android.support.v7.widget.LinearLayoutCompat>
	</android.support.v7.widget.CardView>


	<android.support.v7.widget.CardView
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:android="http://schemas.android.com/apk/res/android"
		style="@style/CardViewStyle"
		>
	<android.support.v7.widget.LinearLayoutCompat
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:layout_margin="10dp">
		<android.support.v7.widget.AppCompatTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/upDistance"
			android:layout_marginBottom="20dp"
			/>
		<org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
			android:id="@+id/upDistance_seekbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:dsb_min="0"
			app:dsb_max="500"
			app:dsb_value="130"
			app:dsb_progressColor="@color/colorAccent"
			app:dsb_indicatorColor="@color/colorAccent"
			/>
		</android.support.v7.widget.LinearLayoutCompat>

	</android.support.v7.widget.CardView>



	<android.support.v7.widget.CardView
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:android="http://schemas.android.com/apk/res/android"
		style="@style/CardViewStyle"
		>

		<android.support.v7.widget.LinearLayoutCompat
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center_horizontal"
			android:layout_margin="10dp">

			<RelativeLayout
				android:id="@+id/double_click_function"
				android:layout_height="match_parent"
				android:layout_width="match_parent"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:clickable="true"
				android:focusable="true"
				android:background="?attr/selectableItemBackground"
				android:padding="10dp"
				>
				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="18sp"
					android:layout_alignParentStart="true"
					android:layout_marginStart="10dp"
					android:text="@string/double_click"
					/>

				<android.support.v7.widget.AppCompatTextView
					android:id="@+id/double_click_textView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true"
					android:layout_marginEnd="30dp"
					android:textColor="@color/colorPrimaryDark"
					android:text="@string/none"/>
			</RelativeLayout>
		</android.support.v7.widget.LinearLayoutCompat>
	</android.support.v7.widget.CardView>

</android.support.v7.widget.LinearLayoutCompat>








